--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
         # windows-latest, windows-2022
         os: [windows-latest]
         arch: [x86, x64]
-        libtype: [static, shared]
+        libtype: [static] # FIXME [static, shared]
         # debug, debugoptimized, release
         buildtype: [debug]
     runs-on: ${{ matrix.os }}
