Add root directory to include path for examples.
This enables us to use `#include <ui.h>` in the examples.

--- a/examples/meson.build
+++ b/examples/meson.build
@@ -56,6 +56,7 @@ foreach name, args : libui_examples
 		link_with: libui_libui,
 		cpp_args: args.get('cpp_args', []),
 		link_args: args.get('link_args', []) + libui_example_link_args,
+		include_directories: include_directories('..'),
 		gui_app: false,
 		install: false)
 endforeach
